Use instance alias instead of app id for config key

--- a/backend/tests/test_flow_config/fake-flow-config/example-1/survey.properties
+++ b/backend/tests/test_flow_config/fake-flow-config/example-1/survey.properties
@@ -2,4 +2,5 @@ awsBucket = example-one
 awsAccessKeyId = your_aws_key
 awsSecretKey = your_aws_secret_key
 serverBase = http://someapp.appspot.com
+instanceUrl = https://one.akvoflow.org
 apiKey = your_api_key
