--- a/backend/tests/test_flow_config/fake-flow-config/no-app-key/survey.properties
+++ b/backend/tests/test_flow_config/fake-flow-config/no-app-key/survey.properties
@@ -1,6 +1,6 @@
-awsBucket = no-app-id
+awsBucket = no-app-key
 awsAccessKeyId = your_aws_key
 awsSecretKey = your_aws_secret_key
 serverBase = http://someapp.appspot.com
-instanceUrl = https://no-app.akvoflow.org
+instanceUrl = https://  .akvoflow.org
 apiKey = your_api_key
