--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,12 @@ dev = [
 [tool.mypy]
 strict = true
 
+[[tool.mypy.overrides]]
+module = [
+  "app.form_validator"
+]
+disallow_untyped_calls = false
+
 [tool.ruff.lint]
 select = [
   "E",  # pycodestyle errors
